src/snapshots/gitui__gitui__tests__app_loading.snap
---
source: src/gitui.rs
expression: terminal.backend()
---
"  Status [1]  |  Log [2]  |  Files Tab [12345] NextTab [⇥] Options [o] Help [h] Quit [q]  "
" ──────────────────────────────────────────────────────────────────────────────────────── "
"┌Unstaged Changes───────────────────(master)┐┌Diff: ─────────────────────────────────────┐"
"│Loading ...                                ││No delta output available.                 │"
"│                                           ││                                           │"
"│                                           ││                                           │"
"└───────────────────────────────────────────┘│                                           │"
"┌Staged Changes─────────────────────────────┐│                                           │"
"│Loading ...                                ││                                           │"
"│                                           ││                                           │"
"└───────────────────────────────────────────┘└───────────────────────────────────────────┘"
"                                                                                          "
