src/snapshots/gitui__gitui__tests__app_loading_finished.snap
---
source: src/gitui.rs
expression: terminal.backend()
---
"  Status [1]  |  Log [2]  |  File Tab [12345] NextTab [⇥] Options [o] Help [h] Quit [^c]  "
" ──────────────────────────────────────────────────────────────────────────────────────── "
"┌Unstaged Changes───────────────────(master)┐┌Diff: ─────────────────────────────────────┐"
"│                                           ││No delta output available.                 │"
"│                                           ││                                           │"
"│                                           ││                                           │"
"└───────────────────────────────────────────┘│                                           │"
"┌Staged Changes─────────────────────────────┐│                                           │"
"│                                           ││                                           │"
"│                                           ││                                           │"
"└───────────────────────────────────────────┘└───────────────────────────────────────────┘"
"Branches [b] Undo Commit [⇧U] Submodules [⇧S] To stage [w]                                "
